--- a/doc/dissertation/resources/software_readme.tex
+++ b/doc/dissertation/resources/software_readme.tex
@@ -2,4 +2,19 @@
 \label{cha:software_readme}
 This section will contain a guide to the project as a whole, as well as the necessary details to write languages and run the metacompiler on them.
 
+\section{The Project Structure} % (fold)
+\label{sec:the_project_structure}
+
+% section the_project_structure (end)
+
+\subsection{Building the Metacompiler} % (fold)
+\label{sub:building_the_metacompiler}
+
+% subsection building_the_metacompiler (end)
+
+\subsection{Executing the Metacompiler} % (fold)
+\label{sub:executing_the_metacompiler}
+
+% subsection executing_the_metacompiler (end)
+
 % chapter software_readme (end)
