--- a/doc/dissertation/resources/testing.tex
+++ b/doc/dissertation/resources/testing.tex
@@ -1,3 +1,9 @@
+% The process of testing, with an examination of the testing strategy. 
+% Why was this strategy chosen over other possible strategies.
+% Deficiencies in the testing strategy, 
+% Focus on testing outcomes of interest.
+% Evaluation of the techniques in hindsight.
+
 \chapter{Testing} % (fold)
 \label{cha:testing}
 This section will:
@@ -5,5 +11,35 @@ This section will:
     \item Provide examples of use of the language
     \item Demonstrate the kinds of errors that the system will discover in your language implementation, as well as the messages that occur. 
 \end{itemize}
+
+\section{The General Testing Approach} % (fold)
+\label{sec:the_general_testing_approach}
+
+% section the_general_testing_approach (end)
+
+\section{Testing Error States} % (fold)
+\label{sec:testing_error_states}
+
+\subsection{Parser Errors} % (fold)
+\label{sub:parser_errors}
+
+% subsection parser_errors (end)
+
+\subsection{Verification Errors} % (fold)
+\label{sub:verification_errors}
+
+% subsection verification_errors (end)
+
+\subsection{Testing Metacompiler Reporting} % (fold)
+\label{sub:testing_metacompiler_reporting}
+
+% subsection testing_metacompiler_reporting (end)
+
+% section testing_error_states (end)
+
+\section{An Example Language} % (fold)
+\label{sec:an_example_language}
+
+% section an_example_language (end)
 
 % chapter testing (end)
