Completed first draft of the elucidation section.

--- a/doc/dissertation/resources/elucidation_requirements.tex
+++ b/doc/dissertation/resources/elucidation_requirements.tex
@@ -301,6 +301,11 @@ It has the following requirements imposed upon it.\\
     These should provide useful language constructs (e.g. non-terminals, special semantics) to aid in the construction of both syntax and semantics for the DSL.
 }
 
+\requirement{Environment Accesses}{Functional}{
+    The metalanguage should provide syntactic constructs for both storing and accessing values in the environment. 
+    This is required to support DSL creators defining their own function definitions and other such constructs in the DSL. 
+}
+
 % subsection requirements_for_the_metalanguage (end)
 
 \subsection{Requirements for the Metacompiler} % (fold)
