--- a/doc/dissertation/ABSOL_Ara_Adkins.tex
+++ b/doc/dissertation/ABSOL_Ara_Adkins.tex
@@ -16,9 +16,10 @@
 \usepackage{enumerate} %For lists
 \usepackage{fancyhdr}
 \usepackage{float} %better float control
+\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc} %for font encoding
 \usepackage{framed} %For frames around blocks
-\usepackage[top=2.5cm, bottom=2.5cm, left=3cm, right=3cm]{geometry} %Fix page margins
+\usepackage[top=3cm, bottom=3cm, left=3.5cm, right=3cm]{geometry} %Fix page margins
 \usepackage[hidelinks]{hyperref} %For URL formleatting (makes clickable links)
 \usepackage[toc, xindy, acronym, nonumberlist, nopostdot]{glossaries}
 \usepackage{graphicx} %For including images, etc.
@@ -41,10 +42,12 @@
 \usepackage{ulem}
 \usepackage{xcolor}
 \usepackage{xparse}
+\usepackage{xstring}
 \usepackage{textcomp}
 \usepackage[prefix=sol-]{xcolor-solarized}
 \usepackage[]{marvosym}
 \usepackage{microtype}
+\usepackage{lmodern}
 
 \usepackage{relsize}
 
@@ -69,6 +72,23 @@
 \newcommand{\eval}{\Downarrow}
 \newcommand{\goesto}[0]{\MVRightarrow}
 \newcommand{\mathgoesto}[0]{\mathord{\text{ \goesto\;}}}
+
+\newcounter{requirementcounter}
+\newcommand*{\reqlabel}[1]{R\refstepcounter{requirementcounter}\therequirementcounter\label{#1}}
+\newcommand*{\reqref}[1]{R\ref{#1}}
+
+\newcommand*{\mklabelcase}[1]{\lowercase{\StrSubstitute[0]{#1}{ }{\_}}}
+
+\newcommand{\requirement}[3]{
+    \StrSubstitute[0]{#1}{ }{}[\labelname]
+    \textbf{Requirement \reqlabel{req:\labelname}}
+    \begin{addmargin}[1em]{0em}
+        \textbf{Name:} #1\\ 
+        \textbf{Type:} #2\\
+        \textbf{Description:}\\
+        #3\\
+    \end{addmargin}
+}
 
 % New Table Column Types
 \newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
@@ -151,7 +171,7 @@
     belowcaptionskip=1\baselineskip,
     % Colors
     backgroundcolor=\color{sol-base3},
-    basicstyle=\color{sol-base0}\ttfamily,
+    basicstyle=\color{sol-base0}\footnotesize\ttfamily,
     keywordstyle=\color{sol-cyan},
     commentstyle=\color{sol-base01},
     stringstyle=\color{sol-blue},
@@ -168,7 +188,8 @@
     rulecolor=\color{sol-base01},
     aboveskip=2em,
     belowskip=2em,
-    upquote=true
+    upquote=true,
+    basewidth={0.5em,0.5em}
 }
 
 % Title
@@ -183,7 +204,7 @@
 
 \title{\titletext}
 \author{Ara Adkins}
-\date{BSc Computer Science (Hons)\\The University of Bath\\\today}
+\date{Bachelor of Science, Computer Science with Honours\\The University of Bath\\\today}
 
 % Glossaries
 \makeglossaries
@@ -198,34 +219,49 @@
 \newpage
 
 % Dissertation Consultation Prohibition
-\consultation{0}
+\consultation{100}
 \newpage
 
 % Declaration
 \declaration{\titletext}{Ara Adkins}
 \newpage
 
-% Contents
-\tableofcontents
-\listoffigures
-\listoftables
-\listofalgorithms
-\printglossaries
-
 % Abtract Text
 \input{resources/abstract.tex}
 
-% Acknowledgements
+% Contents
+\tableofcontents
 
-% Actual Chapters
+\listoffigures
+
+\listoftables
+
+\listofalgorithms
+\addcontentsline{toc}{chapter}{List of algorithms}
+
+\printglossaries
+
+% Acknowledgements
+\include{resources/acknowledgements}
+
+% Chapters
 \include{resources/introduction}
 \include{resources/literature_survey}
+\include{resources/elucidation_requirements}
+\include{resources/architecture_and_algorithms}
+\include{resources/implementation}
+\include{resources/testing}
+\include{resources/evaluation}
+\include{resources/conclusion}
 
 % Bibliography
 \bibliographystyle{abbrvnat}
 \bibliography{resources/bibliography}
 
 \begin{appendix}
+
+\include{resources/software_readme}
+\include{resources/metaspec_grammar}
 
 \end{appendix}
 
