Initial draft of the comments section.

--- a/doc/dissertation/ABSOL_Ara_Adkins.tex
+++ b/doc/dissertation/ABSOL_Ara_Adkins.tex
@@ -239,6 +239,8 @@
 \listofalgorithms
 \addcontentsline{toc}{chapter}{List of algorithms}
 
+\lstlistoflistings
+
 \printglossaries
 
 % Acknowledgements
