--- a/doc/dissertation/resources/bibliography.bib
+++ b/doc/dissertation/resources/bibliography.bib
@@ -868,3 +868,11 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
   year={2016},
   publisher={Springer}
 }
+
+@misc{python_docstrings,
+  title = {PEP 257 --- Docstring Conventions},
+  author = {David Goodger, Guido van Rossum},
+  howpublished = {\url{https://www.python.org/dev/peps/pep-0257/}},
+  note = {Accessed: 2017-04-10},
+  year = 2001
+}
