--- a/doc/dissertation/resources/glossary.tex
+++ b/doc/dissertation/resources/glossary.tex
@@ -84,3 +84,5 @@
         A metalanguage is a language that is, itself, used to describe aspects of another language \citep{jakobson1980metalanguage}. 
     }
 }
+
+\newacronym{vcs}{VCS}{Version Control System}
