--- a/doc/dissertation/resources/metaspec_grammar.tex
+++ b/doc/dissertation/resources/metaspec_grammar.tex
@@ -5,7 +5,7 @@ The syntax for the language is represented using \gls{ebnf}, and is included in 
 
 For an overview of standard \gls{ebnf} syntax, please see the official standard for the metasyntactic notation published in \citet{standard1996ebnf}.
 
-\begin{lstlisting}
+\begin{minted}{text}
 
 (*
     This file defines the grammar for the Syntax of the metalanguage 'metaspec'.
@@ -405,6 +405,7 @@ semantic-special-syntax
     | "deffun"
     | "callproc"
     | "callfun"
-\end{lstlisting}
+
+\end{minted}
 
 % chapter the_metaspec_grammar (end)
