--- a/doc/dissertation/resources/testing.tex
+++ b/doc/dissertation/resources/testing.tex
@@ -14,6 +14,7 @@ This section will:
 
 \section{The General Testing Approach} % (fold)
 \label{sec:the_general_testing_approach}
+% Discuss the brief consideration of user testing and examine why it was dismissed (due to the project state and requirement for significant expertise to utilise the system). 
 
 % section the_general_testing_approach (end)
 
