--- a/doc/dissertation/resources/bibliography.bib
+++ b/doc/dissertation/resources/bibliography.bib
@@ -876,3 +876,11 @@ url="http://dx.doi.org/10.1007/978-3-540-25935-0_4"
   note = {Accessed: 2017-04-10},
   year = 2001
 }
+
+@inproceedings{raemaekers2014semantic,
+  title={Semantic Versioning versus Breaking Changes: A Study of the Maven Repository.},
+  author={Raemaekers, Steven and Van Deursen, Arie and Visser, Joost},
+  booktitle={SCAM},
+  pages={215--224},
+  year={2014}
+}
