Completed section on specification of language syntax.

--- a/doc/dissertation/resources/glossary.tex
+++ b/doc/dissertation/resources/glossary.tex
@@ -86,3 +86,10 @@
 }
 
 \newacronym{vcs}{VCS}{Version Control System}
+
+\newglossaryentry{defblock}{
+    name=Defblock,
+    description={
+        A defblock is a top-level definition block in \gls{metaspec}. 
+    }
+}
