--- a/doc/dissertation/ABSOL_Ara_Adkins.tex
+++ b/doc/dissertation/ABSOL_Ara_Adkins.tex
@@ -49,7 +49,7 @@
 \usepackage[]{marvosym}
 \usepackage{microtype}
 \usepackage{lmodern}
-\usepackage{minted}
+\usepackage[chapter]{minted}
 
 \usepackage{relsize}
 
@@ -144,8 +144,8 @@
 % \renewcommand{\headrulewidth}{0pt}
 % \renewcommand{\footrulewidth}{0pt}
 
-\setlength{\parindent}{0pt}
-\setlength{\headheight}{14pt}
+% \setlength{\parindent}{0pt}
+% \setlength{\headheight}{14pt}
 
 \hypersetup{
     colorlinks,
@@ -194,22 +194,29 @@
     basewidth={0.5em,0.5em}
 }
 
+\floatsetup[listing]{style=plain}
+\newenvironment{longlisting}{\captionsetup{type=listing}}{}
 \setminted{
     autogobble=true, % remove common leading whitespace
     breakanywhere=true,
     breakautoindent=true,
-    fontsize=\footnotesize,
     numbers=left,
     mathescape=true, % allow maths symbols
     stripnl=false,
     tabsize=4,
     texcomments=true,
-    resetmargins=true
-    % xleftmargin=1cm
+    resetmargins=true,
+    xleftmargin=\parindent
 }
+
+\newcommand{\blockfont}{\footnotesize}
 
 \newcommand{\listingautorefname}{Listing}
 \newcommand{\algorithmautorefname}{Algorithm}
+\renewcommand{\chapterautorefname}{Chapter}
+\renewcommand{\sectionautorefname}{Section}
+\renewcommand{\subsectionautorefname}{Subsection}
+\renewcommand{\subsubsectionautorefname}{Subsection}
 
 % Title
 % \pretitle{
